<resources>
    <string name="app_name">Matule</string>
    <string name="onboarding_skip">Пропустить</string>
    <string name="onboarding_start">Начать</string>
    <string name="onboarding_next">Далее</string>
    <string name="onboarding_sign_in">Войти</string>
    <string name="onboarding_title_1">Добро пожаловать</string>
    <string name="onboarding_description_1">Начнем путешествие</string>
    <string name="onboarding_title_2">Начнем путешествие</string>
    <string name="onboarding_description_2">Умная, великолепная и модная коллекция. Изучите сейчас</string>
    <string name="onboarding_title_3">У вас есть сила, чтобы</string>
    <string name="onboarding_description_3">В вашей комнате много красивых и привлекательных растений</string>
    <string name="sign_in_title">Привет 👋</string>
    <string name="sign_in_subtitle">Заполните свои данные или продолжите через социальные медиа</string>
    <string name="sign_in_email_label">Email</string>
    <string name="sign_in_email_hint">xyz@gmail.com</string>
    <string name="sign_in_password_label">Пароль</string>
    <string name="sign_in_password_hint">Введите пароль</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_in_forgot">Восстановить</string>
    <string name="sign_in_bottom_text">Вы впервые? Создать пользователя</string>
    <string name="validation_error_title">Ошибка</string>
    <string name="dialog_ok">ОК</string>
    <string name="mock_login_success">Вход выполнен в тестовом режиме</string>
    <string name="feature_later">Экран будет добавлен позже</string>
    <string name="home_title">Главная</string>
    <string name="home_placeholder">Sprint 1 Home placeholder</string>
    <string name="screen_back">Назад</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="sign_up_subtitle">Заполните свои данные или продолжите через социальные медиа</string>
    <string name="sign_up_name_label">Ваше имя</string>
    <string name="sign_up_name_hint">xxxxxxxx</string>
    <string name="sign_up_agreement">Даю согласие на обработку персональных данных</string>
    <string name="sign_up_policy">Политика конфиденциальности</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_up_bottom_text">Есть аккаунт? Войти</string>
    <string name="forgot_password_title">Забыл Пароль</string>
    <string name="forgot_password_description">Введите свою учетную запись для сброса</string>
    <string name="forgot_password_send">Отправить</string>
    <string name="forgot_password_dialog_title">Проверьте Ваш Email</string>
    <string name="forgot_password_dialog_message">Мы отправили код восстановления пароля на вашу электронную почту.</string>
    <string name="otp_title">OTP Проверка</string>
    <string name="otp_description">Пожалуйста, проверьте свою электронную почту, чтобы увидеть код подтверждения</string>
    <string name="otp_code_label">OTP Код</string>
    <string name="otp_resend">Отправить заново</string>
    <string name="otp_wrong_code">Неверный код</string>
    <string name="update_password_title">Новый Пароль</string>
    <string name="update_password_description">Введите новый пароль и повторите его. Он должен содержать не менее 8 символов, заглавные и строчные латинские буквы, цифры и специальные символы.</string>
    <string name="update_password_label">Пароль</string>
    <string name="update_password_repeat_label">Повторите пароль</string>
    <string name="update_password_hint">Введите пароль</string>
    <string name="update_password_repeat_hint">Повторите пароль</string>
    <string name="update_password_strength_weak">Слабый</string>
    <string name="update_password_strength_medium">Средний</string>
    <string name="update_password_strength_strong">Сильный</string>
    <string name="update_password_captcha_label">CAPTCHA</string>
    <string name="update_password_captcha_hint">Введите CAPTCHA</string>
    <string name="update_password_save">Сохранить</string>
    <string name="privacy_policy_title">Политика конфиденциальности</string>
    <string name="privacy_policy_message">Учебная версия: персональные данные используются только для демонстрации экранов регистрации. TODO: replace with real PDF policy file if provided.</string>
    <string name="shop_search_hint">Поиск</string>
    <string name="shop_categories">Категории</string>
    <string name="shop_popular">Популярное</string>
    <string name="shop_all">Все</string>
    <string name="shop_sales">Акции</string>
    <string name="shop_best_seller">BEST SELLER</string>
    <string name="shop_added_to_cart">Товар добавлен в корзину</string>
    <string name="shop_favorite_added">Добавлено в избранное</string>
    <string name="shop_favorite_removed">Удалено из избранного</string>
    <string name="shop_details_later">Детали товара будут добавлены в следующей части</string>
    <string name="shop_favorite_later">Избранное будет добавлено в следующей части</string>
    <string name="shop_cart_later">Корзина будет добавлена в Sprint 4</string>
    <string name="shop_notification_later">Уведомления будут добавлены позже</string>
    <string name="shop_profile_later">Профиль будет добавлен позже</string>
    <string name="shop_catalog_outdoor">Outdoor</string>
    <string name="shop_catalog_tennis">Tennis</string>
    <string name="shop_catalog_running">Running</string>
    <string name="shop_filter">Фильтры</string>
    <string name="shop_back">Назад</string>
    <string name="shop_details_title">Детали</string>
    <string name="shop_more">подробнее</string>
    <string name="shop_collapse">свернуть</string>
    <string name="shop_add_to_cart_button">В корзину</string>
    <string name="shop_favorite_title">Избранное</string>
    <string name="shop_favorite_empty">Избранных товаров пока нет</string>
    <string name="shop_filters_title">Фильтры</string>
    <string name="shop_only_discount">Со скидкой</string>
    <string name="shop_price_from">Цена от</string>
    <string name="shop_price_to">Цена до</string>
    <string name="shop_filter_colors">Цвета</string>
    <string name="shop_filter_types">Тип</string>
    <string name="shop_type_casual">Повседневная</string>
    <string name="shop_type_sport">Спортивная</string>
    <string name="shop_apply_filter">Применить фильтр</string>
    <string name="shop_products_not_found">Товары не найдены</string>
    <string name="shop_filter_error">Проверьте диапазон цен</string>
    <string name="shop_color_black">Black</string>
    <string name="shop_color_white">White</string>
    <string name="shop_color_blue">Blue</string>
    <string name="shop_color_red">Red</string>
    <string name="shop_color_green">Green</string>
    <string name="search_title">Поиск</string>
    <string name="search_history_title">История поиска</string>
    <string name="search_result_from_history">Результат из истории</string>
    <string name="search_result_from_local_cache">Результат из локального хранилища</string>
    <string name="cart_title">Корзина</string>
    <string name="cart_empty">Корзина пуста</string>
    <string name="cart_checkout">Оформить заказ</string>
    <string name="cart_subtotal">Сумма товаров</string>
    <string name="cart_delivery">Доставка</string>
    <string name="cart_total">Итого</string>
    <string name="cart_quantity_increased">Количество увеличено</string>
    <string name="cart_item_deleted">Товар удалён</string>
    <string name="checkout_title">Оформление заказа</string>
    <string name="checkout_email">Email</string>
    <string name="checkout_phone">Телефон</string>
    <string name="checkout_address">Адрес</string>
    <string name="checkout_profile_address">Адрес из профиля</string>
    <string name="checkout_geo_address">Адрес по геолокации</string>
    <string name="checkout_confirm">Подтвердить заказ</string>
    <string name="checkout_validation_message">Проверьте данные заказа</string>
    <string name="order_confirm_title">Заказ оформлен</string>
    <string name="order_confirm_message">Ваш заказ успешно оформлен.</string>
    <string name="order_return_to_shopping">Вернуться к покупкам</string>
    <string name="side_menu_title">Меню</string>
    <string name="side_menu_settings_disabled">Настройки недоступны</string>
    <string name="side_menu_logout">Выйти</string>
    <string name="side_menu_logout_error_message">Не удалось выйти</string>
    <string name="menu_home">Главная</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_orders">Заказы</string>
    <string name="menu_notifications">Уведомления</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_cart">Корзина</string>
    <string name="menu_settings">Настройки</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="profile_change_photo">Изменить фото</string>
    <string name="profile_loyalty_title">Карта лояльности</string>
    <string name="profile_save">Сохранить</string>
    <string name="profile_data_error">Проверьте данные профиля</string>
    <string name="profile_updated">Профиль обновлён</string>
    <string name="profile_photo_camera">Камера</string>
    <string name="profile_photo_gallery">Галерея</string>
    <string name="profile_photo_kandinsky">Кандинский</string>
    <string name="profile_photo_camera_selected">Выбрана камера</string>
    <string name="profile_photo_gallery_selected">Выбрана галерея</string>
    <string name="profile_photo_kandinsky_selected">Выбран Кандинский</string>
    <string name="orders_placeholder">Заказы будут реализованы далее</string>
    <string name="notifications_placeholder">Уведомления будут реализованы далее</string>
    <string name="notifications_title">Уведомления</string>
    <string name="notifications_empty">Уведомлений пока нет</string>
    <string name="notification_read_toast">Уведомление прочитано</string>
    <string name="orders_title">Заказы</string>
    <string name="orders_empty">Заказов пока нет</string>
    <string name="order_details_title_sprint5">Детали заказа</string>
    <string name="order_not_found">Заказ не найден</string>
    <string name="order_repeat">Повторить заказ</string>
    <string name="order_cancel">Отменить заказ</string>
    <string name="order_repeated_toast">Заказ повторён</string>
    <string name="order_cancelled_toast">Заказ отменён</string>
    <string name="order_cancel_confirm_title">Отменить заказ?</string>
    <string name="order_cancel_confirm_message">Заказ будет отменён.</string>
    <string name="order_status_created">Создан</string>
    <string name="order_status_cancelled">Отменён</string>
    <string name="order_status_repeated">Повторён</string>
</resources>
