<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.matule.presentation.splash.SplashFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_splashFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.example.matule.presentation.onboarding.OnboardingFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_onboardingFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.matule.presentation.auth.SignInFragment"
        android:label="@string/sign_in_button">
        <action
            android:id="@+id/action_signInFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_signInFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.matule.presentation.auth.signup.SignUpFragment"
        android:label="@string/sign_up_title">
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_signUpFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.matule.presentation.auth.forgot.ForgotPasswordFragment"
        android:label="@string/forgot_password_title">
        <action
            android:id="@+id/action_forgotPasswordFragment_to_otpVerificationFragment"
            app:destination="@id/otpVerificationFragment" />
        <action
            android:id="@+id/action_forgotPasswordFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/forgotPasswordFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/otpVerificationFragment"
        android:name="com.example.matule.presentation.auth.otp.OtpVerificationFragment"
        android:label="@string/otp_title">
        <action
            android:id="@+id/action_otpVerificationFragment_to_updatePasswordFragment"
            app:destination="@id/updatePasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/updatePasswordFragment"
        android:name="com.example.matule.presentation.auth.update.UpdatePasswordFragment"
        android:label="@string/update_password_title">
        <action
            android:id="@+id/action_updatePasswordFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/updatePasswordFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.matule.presentation.home.HomeFragment"
        android:label="@string/home_title">
        <action
            android:id="@+id/action_homeFragment_to_catalogFragment"
            app:destination="@id/catalogFragment" />
        <action
            android:id="@+id/action_homeFragment_to_popularFragment"
            app:destination="@id/popularFragment" />
    </fragment>

    <fragment
        android:id="@+id/catalogFragment"
        android:name="com.example.matule.presentation.catalog.CatalogFragment"
        android:label="@string/shop_categories" />

    <fragment
        android:id="@+id/popularFragment"
        android:name="com.example.matule.presentation.popular.PopularFragment"
        android:label="@string/shop_popular" />
</navigation>
