<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editProfileNameEditText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_input"
        android:hint="@string/sign_up_name_label"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/matule_text_dark"
        android:textColorHint="@color/matule_text_gray" />

    <EditText
        android:id="@+id/editProfileEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_input"
        android:hint="@string/sign_in_email_label"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/matule_text_dark"
        android:textColorHint="@color/matule_text_gray" />

    <EditText
        android:id="@+id/editProfilePhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_input"
        android:hint="@string/checkout_phone"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/matule_text_dark"
        android:textColorHint="@color/matule_text_gray" />
</LinearLayout>
